@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1221 2013/03/05 02:23:46 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1222 2013/03/09 03:02:32 zmedico Exp $
+
+  09 Mar 2013; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.54.ebuild,
+  -portage-2.2.0_alpha165.ebuild:
+  Remove old versions.
 
 *portage-2.2.0_alpha166 (05 Mar 2013)
 
